# blipay-credit

./: .env.sample  Dockerfile  INSTRUCTIONS.MD  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-text.txt
src/: __init__.py  config.py  creditscore.py  logger.py  main.py  openweathermap.py
tests/: test_creditscore.py  test_openweathermap.py
